fix sticky hover on mobile

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -53,13 +53,6 @@
   color: white;
 }
 
-.navTab:hover, .logout:hover {
-  background: rgb(210, 209, 208);
-  color: rgb(255, 140, 0);
-  cursor: pointer;
-  border-radius: 50%;
-}
-
 button, input[type=submit] {
   border: 0px;
   border-radius: 20px;
@@ -70,10 +63,19 @@ button, input[type=submit] {
   margin: .5em;
 }
 
-button:hover, input[type=submit]:hover {
-  background: rgb(210, 209, 208);
-  color: rgb(255, 140, 0);
-  cursor: pointer;
+@media(hover: hover) {
+  .navTab:hover, .logout:hover {
+    background: rgb(210, 209, 208);
+    color: rgb(255, 140, 0);
+    cursor: pointer;
+    border-radius: 50%;
+  }
+  
+  button:hover, input[type=submit]:hover {
+    background: rgb(210, 209, 208);
+    color: rgb(255, 140, 0);
+    cursor: pointer;
+  }
 }
 
 input[type=text], textarea {
@@ -95,7 +97,6 @@ input[type=text], textarea {
   text-decoration: none;
   color: white;
 }
-
 
 input[type=checkbox] {
   background: rgb(255, 140, 0);
@@ -183,7 +184,7 @@ ul {
   }
   
   .navTab {
-    width: 13%;
+    width: 14%;
     margin: .25em;
     padding: .75em
   }
@@ -200,5 +201,6 @@ ul {
     font-size: 2.5em;
   }
 }
+
 
 
